data/all_generated_tests/raw_wast_tests/call_TypeMismatchinControlFlowInstructions_3741.wast
;; 10. **Call in Loop with Result Type Misalignment**:     - **Description**: Place a function call within a loop that returns a type different from what the loop expects to pass on.     - **Reasoning**: Tests the proper alignment of function return types within loops.     - **Constraint**: Type errors should highlight discrepancies in expected versus actual return types within loops.     - **Relation**: Assures function call's return type correctness in loop contexts.

(assert_invalid
  (module
    (func $func_with_return (result i32) (i32.const 42))
    (func $type-mismatch-in-loop 
      (i32.const 0)
      (loop (call $func_with_return (i32.const 0)))
    )
  )
  "type mismatch"
)